unpackaged/main/default/objects/Contact/fields/Churned__c.field-meta.xml
<CustomField>
    <fullName>Churned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Churned</label>
    <type>Checkbox</type>
</CustomField>