unpackaged/main/default/objects/Contact/fields/Entity_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Entity_Contact_ID__c</fullName>
    <label>Entity Contact ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>