unpackaged/main/default/objects/Contact/fields/Zoho_Id__c.field-meta.xml
<CustomField>
    <fullName>Zoho_Id__c</fullName>
    <description>Zoho Id for records migrated fom Zoho</description>
    <externalId>true</externalId>
    <label>Zoho Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>